Fix layout issue

--- a/_sass/color_schemes/blue.scss
+++ b/_sass/color_schemes/blue.scss
@@ -1,3 +1,4 @@
 $link-color: $blue-000;
 // Increase the side bar width as some of the page titles don't fit in the default size.
 $content-width: 1000px;
+$nav-width: 0px;
